[package]
name = "crossword-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-translate3 = "*"
serde = "^1.0"
serde_json = "^1.0"
hyper = "*"
hyper-rustls = "0.24.0"
tokio = { version = "1", features = ["full"] }
